Perf-O-Meter Background set to transparent
CMK-28404

Change-Id: Ibaf9facdc4bf4bfddd61eab4e73aade81aa35a0d

--- a/packages/cmk-frontend/src/themes/facelift/scss/_status.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_status.scss
@@ -357,7 +357,7 @@ table.data tr.data > td.perfometer {
     width: 100%;
     padding: 0;
     overflow: hidden;
-    border: 1px solid $color-table-border;
+    border: 1px solid $perfometer-border-color;
     filter: saturate(50%);
   }
 
