--- a/packages/cmk-frontend-vue/src/assets/zindices.css
+++ b/packages/cmk-frontend-vue/src/assets/zindices.css
@@ -14,4 +14,5 @@
   --z-index-dropdown-offset: +100;
   --z-index-popup-offset: +200;
   --z-index-tooltip-offset: +300;
+  --z-index-modal-overlay-offset: +400;
 }
