--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
@@ -62,6 +62,7 @@ $input-background-color: $color-daylight-grey-50;
 $input-hover-bg-color: $ux-theme-4;
 $input-nested-background-color: $ux-theme-3;
 $input-dropdown-border-color: $color-mid-grey-50;
+$dropdown-arrow-color: $color-conference-grey-100;
 
 // -----------------------------------------------------------------------------
 // States
