--- a/packages/cmk-frontend/src/themes/modern-dark/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/modern-dark/scss/_variables.scss
@@ -62,6 +62,7 @@ $input-background-color: $color-midnight-grey-50;
 $input-hover-bg-color: $ux-theme-4;
 $input-nested-background-color: rgb(63, 75, 93);
 $input-dropdown-border-color: $color-midnight-grey-60;
+$dropdown-arrow-color: $color-white-100;
 
 // -----------------------------------------------------------------------------
 // States
