revert green to 2.4 variant
new green was too close to the stale state color in 2.5, UX decided to
revert

CMK-28549

Change-Id: I7945d68f2e1b6c8894bc0b805190d32963203a01

--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
@@ -79,8 +79,8 @@ $color-state-6-background: rgb(185, 236, 250);
 $color-state-7-background: rgb(233, 128, 110);
 $color-state-8-background: rgb(241, 174, 162);
 $color-state-9-background: rgb(191, 90, 191);
-$color-state-success-background: $color-corporate-green-50;
-$color-state-success-border: $color-corporate-green-70;
+$color-state-success-background: $success;
+$color-state-success-border: $success;
 $color-state-running-background: $color-dark-blue-50;
 
 // -----------------------------------------------------------------------------
