19080 FIX HTML email: Show correct summary for bulk notifications
SUP-26981

Change-Id: Ic026541240eaaab2f323f846499f16a954d52fe9

--- a/notifications/templates/mail/bulk.html
+++ b/notifications/templates/mail/bulk.html
@@ -69,7 +69,13 @@
                                 {% endif %}
                             </div>
                         </td>
-                        <td align="right" width="100%" style="padding: 0; vertical-align: middle">{{ entry.SHORTDATETIME }}</td>
+                        <td align="right" width="100%" style="padding: 0; vertical-align: middle">
+                            {% if bulk_service_notification %}
+                                {{ entry.LASTSERVICESTATECHANGE | timestamp() if entry.get('LASTSERVICESTATECHANGE') else entry.SHORTDATETIME }}
+                            {% else %}
+                                {{ entry.LASTHOSTSTATECHANGE | timestamp() if entry.get('LASTHOSTSTATECHANGE') else entry.SHORTDATETIME }}
+                            {% endif %}
+                        </td>
                     </tr>
                 </table>
                 <table>
