revert red crit state to 2.4 colors
stale colors were too similar and was decided to revert

CMK-28549

Change-Id: Id9c3c017687039d8da4b2166e1f8abf1046acf2e

--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
@@ -69,8 +69,8 @@ $dropdown-arrow-color: $color-conference-grey-100;
 // -----------------------------------------------------------------------------
 $color-state-1-background: $color-yellow-50;
 $color-state-1-border: $color-yellow-70;
-$color-state-2-background: $color-dark-red-50;
-$color-state-2-border: $color-dark-red-50;
+$color-state-2-background: rgb(200, 50, 50);
+$color-state-2-border: rgb(200, 50, 50);
 $color-state-3-background: $color-orange-50;
 $color-state-3-border: $color-orange-70;
 $color-state-4-background: $color-mist-grey-50;
